move all html from server side to client side

--- a/view/admin_landing.html
+++ b/view/admin_landing.html
@@ -30,7 +30,7 @@
 			<input type="submit" value="START CHECK-IN" ng-click="ShowHide()"/>
 		</form>
 		<br><br>
-		<form class="form2" action="history" method="GET">
+		<form class="form2" action="/history" method="GET">
 			<input class='checkIn' type="submit" value="VIEW HISTORY"></input>
 		</form>
 	</div>
