--- a/view/login.html
+++ b/view/login.html
@@ -6,7 +6,6 @@
 <!-- Latest compiled and minified CSS Bootstrap 4-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -26,7 +25,8 @@
 	<h4>CMPT 218 Assignment 3 -- Lydia Zheng</h4><br>
 	<button href="#" class="instruction" data-toggle="tooltip" data-placement="right" title="Additional Features: 1. Admin can delete collection in history page
 		2. Add app bar on top of the page
-		3. Add this instruction tooltip button ^_^ !">Instruction</button>
+		3. When admin stopped checking, it will show the students only checked at that time range
+		4. Add this instruction tooltip button ^_^ !">Instruction</button>
 
 	<br>
 	<form class="form" action="/admin" method="post">
